force-app/main/default/objects/custom_create230__c/custom_create230__c.object-meta.xml
<CustomObject>
    <label>Custom created object230</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects230</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>