force-app/main/default/objects/custom_create230__c/fields/custom_create_230field550__c.field-meta.xml
<CustomField>
    <fullName>custom_create_230field550__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 230field550</label>
    <type>Checkbox</type>
</CustomField>