force-app/main/default/objects/custom_create230__c/fields/custom_create_230field620__c.field-meta.xml
<CustomField>
    <fullName>custom_create_230field620__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 230field620</label>
    <type>Checkbox</type>
</CustomField>